Support Reminder list in AddressBook